[project]
name = "bugbounty"
version = "0.1.0"
description = "Automated agent to do bug bounty"
authors = [
    {name = "martin gullaksen",email = "martin.gullaksen@innovatec.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
